src/np222kk/dv507/a2/test/cases/negative/test_neg_return_02.ofp
void main() {
    
}

# wrong return type
int testFun() {
    return 1.0;
}